--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -64,7 +64,7 @@ SFR:
 
 # HTC
 HTC:
-  regex: 'HTC|Sprint (?:APA|ATP)|ADR(?!910L)[a-z0-9]+|NexusHD2|Amaze[ _]4G[);/ ]|(Desire|Sensation|Evo ?3D|IncredibleS|Wildfire|Butterfly)[ _]?([^;/)]+)(?: Build|\))|(Amaze[ _]4G|One ?[XELSV\+]+)[);/ ]|SPV E6[05]0|(One M8|X525a|PG86100|PC36100|XV6975|PJ83100|2PYB2|2PZC5|0PJA10|0PJA2|HTV33|0PM92|0PCV1)[);/ ]'
+  regex: 'HTC|Sprint (?:APA|ATP)|ADR(?!910L)[a-z0-9]+|NexusHD2|Amaze[ _]4G[);/ ]|(Desire|Sensation|Evo ?3D|IncredibleS|Wildfire|Butterfly)[ _]?([^;/)]+)(?: Build|\))|(Amaze[ _]4G|One ?[XELSV\+]+)[);/ ]|SPV E6[05]0|(One M8|X525a|PG86100|PC36100|XV6975|PJ83100|2PYB2|2PZC5|0PJA10|0PJA2|HTV33|0PM92|0PCV1|601HT)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -76,7 +76,7 @@ HTC:
       model: 'Evo 3G'
     - regex: 'PC36100[);/ ]'
       model: 'Evo 4G'
-    - regex: 'HTV33[);/ ]'
+    - regex: '(?:HTV33|601HT)[);/ ]'
       model: 'U11'
     - regex: '(?:801e|802[wdt])'
       model: 'One'
@@ -4086,7 +4086,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-4]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-4]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual|A001SO'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4222,6 +4222,8 @@ Sony:
       model: 'Xperia A4'
     - regex: '(?:Sony(?:Ericsson)?)?I(?:4113|31[12]3)'
       model: 'Xperia 10'
+    - regex: 'A001SO[);/ ]'
+      model: 'Xperia 10 II'
     - regex: '(?:Sony(?:Ericsson)?)?I(?:42[19]3|3223)'
       model: 'Xperia 10 Plus'
     - regex: '(?:Sony(?:Ericsson)?)?(?:J(?:9110|81[17]0)|SOV40|SO-03L|802SO)'
@@ -5133,6 +5135,8 @@ Google:
       model: 'Pixel 3 XL'
     - regex: 'Pixel 2 XL'
       model: 'Pixel 2 XL'
+    - regex: 'Pixel 3a'
+      model: 'Pixel 3a'
     - regex: 'Pixel 3'
       model: 'Pixel 3'
     - regex: 'Pixel 4 XL'
@@ -6891,7 +6895,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-58]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC|S6-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-58]|KYF3[19]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC|S6-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6933,7 +6937,7 @@ Kyocera:
       model: 'Miraie'
     - regex: 'KYY24[;/) ]'
       model: 'Torque G01'
-    - regex: 'KYF31[;/) ]'
+    - regex: 'KYF3[19][;/) ]'
       model: 'Gratina 4G'
     - regex: 'KYV35[;/) ]'
       model: 'Torque G02'
@@ -7491,7 +7495,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]|L-51A'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]|L-51A|901LG'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -7534,6 +7538,8 @@ LG:
       model: 'G8'
     - regex: 'LM-G810'
       model: 'G8S ThinQ'
+    - regex: '901LG[);/ ]'
+      model: 'G8X ThinQ'
     - regex: 'VS501'
       model: 'K20'
     - regex: '(?:LG-)?H502'
@@ -9956,7 +9962,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJ]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-36]|SCV3[1-9]|404SC|SCL22|SCG01'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJG]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-356]|SCV3[1-9]|40[34]SC|SCL22|SCG01'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10079,7 +10085,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T230(?:NU)?'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T23[15]'
+    - regex: '(?:SAMSUNG-)?SM-T23[15]|403SC'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" 3G'
     - regex: '(?:SAMSUNG-)?SM-T310'
@@ -10386,7 +10392,7 @@ Samsung:
       model: 'GALAXY S5'
     - regex: '(?:SAMSUNG-)?SM-G901F'
       model: 'GALAXY S5 LTE+'
-    - regex: '(?:SAMSUNG-)?SM-G870[AFW]'
+    - regex: '(?:SAMSUNG-)?SM-G870[AFW]|SC-02G'
       model: 'GALAXY S5 Active'
     - regex: '(?:SAMSUNG-)?SM-G903[FMW]'
       model: 'GALAXY S5 Neo'
@@ -10780,7 +10786,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?SM-N970(?:0|8|9|D|F|J|K|L|S|U1|U|W8|X)'
       model: 'GALAXY Note 10'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[BV]|SC-01M)'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[BV]|SC-01M|SCV45)'
       model: 'GALAXY Note 10+'
       device: 'phablet'
 
@@ -11503,7 +11509,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|506SH|SHL22|SHV4[023-7]|SHV3[568]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[023-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11511,6 +11517,8 @@ Sharp:
       model: 'Aquos Xx3'
     - regex: '502SH[);/ ]'
       model: 'Aquos Xx2'
+    - regex: '507SH[);/ ]'
+      model: 'One'
     - regex: 'S3-SH[);/ ]'
       model: 'One S3'
     - regex: 'S5-SH[);/ ]'
@@ -11529,7 +11537,7 @@ Sharp:
       model: 'Aquos Phone SHL22'
     - regex: 'SH-L02[);/ ]'
       model: 'Aquos L2'
-    - regex: '(?:605SH|SH-03J)[);/ ]'
+    - regex: '(?:605SH|SH-03J|SHV39)[);/ ]'
       model: 'Aquos R'
     - regex: '701SH[);/ ]'
       model: 'Aquos R Compact'
@@ -11551,11 +11559,11 @@ Sharp:
       model: 'Aquos S Basic'
     - regex: 'SHV38[);/ ]'
       model: 'Aquos S Mini'
-    - regex: '(?:FS8010|SH-M08|SHV43|SH-01K)[);/ ]'
+    - regex: '(?:FS8010|SH-M08|SHV43|SH-01[KL])[);/ ]'
       model: 'Aquos S2'
     - regex: 'SHV46[);/ ]'
       model: 'Aquos S3 Plus'
-    - regex: '(?:SHV44|808SH|SH-04L)[);/ ]'
+    - regex: '(?:SHV44|808SH|SH-04L|SH-03G)[);/ ]'
       model: 'Aquos R3'
     - regex: '(?:FS8032|SH-02M|SHV45)[);/ ]'
       model: 'Aquos S3'
@@ -11563,6 +11571,8 @@ Sharp:
       model: 'Aquos S3 Mini'
     - regex: '901SH[);/ ]'
       model: 'Aquos S3 Plus'
+    - regex: 'SH-51A[);/ ]'
+      model: 'Aquos R5G'
     - regex: 'SHV35[);/ ]'
       model: 'Aquos U'
     - regex: 'TG-L900S[);/ ]'
