feat(device) detect new brand AT&T model: Radiant Core (U304AA) feat(device) detect brand SEMP TCL model: GO! 3C Plus feat(device) detect brand TCL model: C9 (5199I) feat(device) detect brand How model: HT-1001G Go Kids (1001-G Go) feat(device) detect brand Huawei model: Qua Tab 02 10.1" (HWT31) feat(device) detect brand Realme model: X3 Super Zoom (RMX2086) feat(device) detect brand ZTE models: Optus X Vista (Z6621O), Optus X Power 2 (P545), Blade A3 2019-T, Optus X Wave (P609) feat(device) detect brand Vivo model: V15(1819), feat(device) detect brand Multilaser models: MS60Z, MS45S, MS80X, MS5.V2, MS50S
issue #6330

--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -2267,7 +2267,7 @@
   device:
     type: smartphone
     brand: ZT
-    model: Blade A5 2019
+    model: Blade A5 (2019)
   os_family: Android
   browser_family: Chrome
 -
