--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2336,7 +2336,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2383,6 +2383,8 @@ Vivo:
       model: 'V11 Pro'
     - regex: 'vivo 1806[);/ ]'
       model: 'V11i'
+    - regex: '1819[);/ ]'
+      model: 'V15'
     - regex: 'vivo 1818[);/ ]'
       model: 'V15 Pro'
     - regex: 'vivo 1909[);/ ]'
@@ -5336,7 +5338,7 @@ Hoozo:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5810,6 +5812,9 @@ Huawei:
     - regex: 'STK-(L2[12]|LX3)[);/ ]'
       model: 'Y9 Prime (2019)'
 
+    - regex: 'HWT31[);/ ]'
+      model: 'Qua Tab 02 10.1"'
+      device: 'tablet'
     - regex: 'HDN-[LW]09[);/ ]'
       model: 'Honor Water Play 10.1'
       device: 'tablet'
@@ -9196,7 +9201,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2063|2072|20[234]0|20[57]1|2185|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2063|2072|2086|20[234]0|20[57]1|2185|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9251,6 +9256,8 @@ Realme:
       model: 'X50 Pro'
     - regex: 'RMX2072[);/ ]'
       model: 'X50 Pro Player'
+    - regex: 'RMX2086[);/ ]'
+      model: 'X3 Super Zoom'
 
 # oppo
 OPPO:
@@ -11774,20 +11781,22 @@ T-Mobile:
 
 # Tcl
 TCL:
-  regex: 'TCL[_ -][a-z0-9]+|(TCL[_ -][^;/]+|7040N) Build|TCLGalaG60|A502DL|T780H'
+  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'TCLGalaG60'
+    - regex: 'TCLGalaG60(?:\(9108A\))?[);/ ]'
       model: 'Gala G60'
-    - regex: 'T780H'
+    - regex: '5199I[);/ ]'
+      model: 'C9'
+    - regex: 'T780H[);/ ]'
       model: 'Plex'
     - regex: 'TCL[_ -]([^;/]+) Build'
       model: '$1'
     - regex: 'TCL[_ -]([a-z0-9]+)'
       model: '$1'
-    - regex: '(7040N)'
+    - regex: '(7040N)[);/ ]'
       model: '$1'
-    - regex: 'A502DL'
+    - regex: 'A502DL[);/ ]'
       model: 'LX'
 
 # Teclast
@@ -13861,7 +13870,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT|P545|P609)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14025,6 +14034,10 @@ ZTE:
       model: 'N818S'
     - regex: 'Z5031O[);/ ]'
       model: 'Optus X Spirit 2'
+    - regex: 'P545[);/ ]'
+      model: 'Optus X Power 2'
+    - regex: 'P609[);/ ]'
+      model: 'Optus X Wave'
     - regex: 'Blade (A(0620|310|452|460|462|465|475|510|512|520|530|602|612|910)|L110|V0730|V0800|V580|V1000)[);/ ]'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus[);/ ]'
@@ -14049,8 +14062,10 @@ ZTE:
       model: 'Blade L7'
     - regex: 'Blade L8[);/ ]'
       model: 'Blade L8'
+    - regex: 'Blade A3 2019-T[);/ ]'
+      model: 'Blade A3 (2019)'
     - regex: 'Blade A5 2019-T[);/ ]'
-      model: 'Blade A5 2019'
+      model: 'Blade A5 (2019)'
     - regex: 'BLADE A0622[);/ ]'
       model: 'Blade A6'
     - regex: 'BLADE A6 MAX[);/ ]'
@@ -14215,6 +14230,8 @@ ZTE:
       model: 'Mono'
     - regex: 'V865M[);/ ]'
       model: 'V865M'
+    - regex: 'Z6621O[);/ ]'
+      model: 'Optus X Vista'
 
     - regex: 'AxonPhone ([^;/]+) Build'
       model: 'AxonPhone $1'
@@ -15179,19 +15196,21 @@ Contixo:
      - regex: 'CT9716-B[);/ ]'
        model: 'Revolution HD'
 
-# How
+# How (how.com.br)
 How:
-  regex: '(?:HT-705XS|705-G Go)[);/ ]'
+  regex: '(?:HT-705XS|705-G Go|1001-G Go)[);/ ]'
   device: 'tablet'
   models:
     - regex: '(HT-705XS)[);/ ]'
       model: '$1'
+    - regex: '(1001-G Go)[);/ ]'
+      model: 'HT-1001G Go Kids'
     - regex: '(705-G Go)[);/ ]'
       model: 'HT-$1'
 
 # Multilaser
 Multilaser:
-  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGX]|M7[_-]3G[_-]PLUS|MS45S_A6|M7SQC_Plus|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7sLite)[);/ ]'
+  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGX]|M7[_-]3G[_-]PLUS|MS5\.V2|MS45S_A6|MS45S|MS50S|MS60Z|M7SQC_Plus|MS80X|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7sLite)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]G[_ ]Pro[);/ ]'
@@ -15204,7 +15223,7 @@ Multilaser:
       model: 'E Lite'
     - regex: 'Multilaser[ _]([FEH])[);/ ]'
       model: '$1'
-    - regex: '(MS50[LGX]|MS45S_A6|MS40[GS]|MS55M|MS70)[);/ ]'
+    - regex: '(MS50[LGX]|MS45S_A6|MS40[GS]|MS55M|MS70|MS60Z|MS45S|MS80X|MS50S|MS5\.V2)[);/ ]'
       model: '$1'
     - regex: 'M7[_-]3G[_-]PLUS[);/ ]'
       device: 'tablet'
@@ -15266,11 +15285,13 @@ Philco:
 
 # SEMP TCL
 SEMP TCL:
-  regex: '(?:GO3E|GO5E|5101J)[);/ ]'
+  regex: '(?:GO3E|GO5E|5101J|GO3C Plus)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '5101J[);/ ]'
       model: 'L9 Plus'
+    - regex: 'GO3C Plus[);/ ]'
+      model: 'GO! 3C Plus'
     - regex: '(GO3E|GO5E)[);/ ]'
       model: '$1'
 
@@ -15333,3 +15354,9 @@ Tone:
   regex: 'TONE (e19|m15)[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# AT&T
+AT&T:
+   regex: 'U304AA[);/ ]'
+   device: 'smartphone'
+   model: 'Radiant Core'
