feat(device) detect brand Sharp model: Aquos 3 (509SH)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11516,7 +11516,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[023-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[023-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|509SH)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11560,6 +11560,8 @@ Sharp:
       model: 'Aquos Crystal'
     - regex: '402SH[);/ ]'
       model: 'Aquos Crystal X'
+    - regex: '509SH[);/ ]'
+      model: 'Aquos 3'
     - regex: 'SHV40[);/ ]'
       model: 'Aquos S'
     - regex: '702SH[);/ ]'
