fix(browser) fix detect browser: hola! Browser feat(device) detect brand Logicom model: Le Hola FR
issue: #6335

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -270,7 +270,7 @@
     default: 'Blink'
 
 # hola! Browser (https://hola.org/browser)
-- regex: 'Hola(?:/(\d+[\.\d]+))?'
+- regex: 'Chrome/.+ Hola(?:/(\d+[\.\d]+))?'
   name: 'hola! Browser'
   version: '$1'
   engine:
