--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7763,7 +7763,7 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le Lift)[_);/ ]'
+  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le Lift|Le Hola)[_);/ ]'
   device: 'tablet'
   models:
     - regex: 'La Tab 72'
@@ -7786,6 +7786,9 @@ Logicom:
       model: '$1 BOT $2'
     - regex: 'Le Lift'
       model: 'Le Lift'
+      device: 'smartphone'
+    - regex: 'Le Hola (FR)[);/ ]'
+      model: 'Le Hola $1'
       device: 'smartphone'
 
 # Konka
