fix(pr) remove group match FR
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7787,8 +7787,8 @@ Logicom:
     - regex: 'Le Lift'
       model: 'Le Lift'
       device: 'smartphone'
-    - regex: 'Le Hola (FR)[);/ ]'
-      model: 'Le Hola $1'
+    - regex: 'Le Hola FR[);/ ]'
+      model: 'Le Hola FR'
       device: 'smartphone'
 
 # Konka
