--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -7631,9 +7631,10 @@
     name: Chrome Mobile
     short_name: CM
     version: 56.0.2924.87
-    name: Chrome Mobile
-    short_name: CM
-    version: 84.0.4147.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
     brand: SA
     model: GALAXY J7 Sky Pro
   os_family: Android
