feat(AbstractParser) matchUserAgent exception added regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10578,8 +10578,7 @@ Samsung:
       model: 'GALAXY A10e'                # 2019
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
-    - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSW]|YN)|S205DL)'
-    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)|SC-02M|SCV46'
+    - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSW]|YN)|S205DL)|SC-02M|SCV46'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
