feat(device) detect brand Multilaser model: MS60X; feat(device) detect brand SEMP TCL model: GO! 3C (GO3C); feat(device) detect brand Positivo BGH model: Twist SE;
issue #6330

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15303,7 +15303,7 @@ How:
 
 # Multilaser
 Multilaser:
-  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGX]|M7[_-]3G[_-]PLUS|MS5\.V2|MS45S_A6|MS45S|MS50S|MS60Z|M7SQC_Plus|MS80X|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7sLite)[);/ ]'
+  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGX]|M7[_-]3G[_-]PLUS|MS5\.V2|MS45S_A6|MS45S|MS50S|MS60[XZ]|M7SQC_Plus|MS80X|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7sLite)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]G[_ ]Pro[);/ ]'
@@ -15316,7 +15316,7 @@ Multilaser:
       model: 'E Lite'
     - regex: 'Multilaser[ _]([FEH])[);/ ]'
       model: '$1'
-    - regex: '(MS50[LGX]|MS45S_A6|MS40[GS]|MS55M|MS70|MS60Z|MS45S|MS80X|MS50S|MS5\.V2)[);/ ]'
+    - regex: '(MS50[LGX]|MS45S_A6|MS40[GS]|MS55M|MS70|MS60[XZ]|MS45S|MS80X|MS50S|MS5\.V2)[);/ ]'
       model: '$1'
     - regex: 'M7[_-]3G[_-]PLUS[);/ ]'
       device: 'tablet'
@@ -15333,7 +15333,7 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(?:T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|[23SM]))[);/ ]'
+  regex: '(?:T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|SE|[23SM]))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'S455[);/ ]'
@@ -15354,6 +15354,8 @@ Positivo BGH:
       model: 'Twist 2 Pro'
     - regex: 'Twist XL[);/ ]'
       model: 'Twist XL'
+    - regex: 'Twist SE[);/ ]'
+      model: 'Twist SE'
     - regex: '(?:Positivo )?Twist ([23SM])[);/ ]'
       model: 'Twist $1'
 
@@ -15378,14 +15380,16 @@ Philco:
 
 # SEMP TCL
 SEMP TCL:
-  regex: '(?:GO3E|GO5E|5101J|GO3C Plus)[);/ ]'
+  regex: '(?:GO[35]E|5101J|GO3C(?: Plus)?)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '5101J[);/ ]'
       model: 'L9 Plus'
     - regex: 'GO3C Plus[);/ ]'
       model: 'GO! 3C Plus'
-    - regex: '(GO3E|GO5E)[);/ ]'
+    - regex: 'GO3C[);/ ]'
+      model: 'GO! 3C'
+    - regex: '(GO[35]E)[);/ ]'
       model: '$1'
 
 # Newman
