feat(mobile app) detect app UnityPlayer

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -492,3 +492,20 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Android OS 5.1 / API-22 (HUAWEITIT-U02/C579B105); HUAWEI HUAWEI TIT-U02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.89 Mobile Safari/537.36 UnityPlayer/2017.4.34f1
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: UnityPlayer
+    version: 2017.4.34
+  device:
+    type: smartphone
+    brand: HU
+    model: Y6 Pro
+  os_family: Android
+  browser_family: Unknown
