--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -229,3 +229,9 @@
   regex: 'Snapchat/([\d\.]+)'
   name: 'Snapchat'
   version: '$1'
+
+# UnityPlayer
+- regex: 'UnityPlayer/([\d\.]+)'
+  name: 'UnityPlayer'
+  version: '$1'
+
