feat(device) detect new brand BIHEE models: A12, A11, A7+, A8+, A6, A5 feat(device) detect brand Meizu model: 16X (MZ-16 X)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8142,7 +8142,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H|MZ-15 Plus)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H|MZ-15 Plus|MZ-16 X)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -8212,6 +8212,8 @@ Meizu:
       model: '15 Plus'
     - regex: 'MZ-16th[);/ ]'
       model: '16th'
+    - regex: 'MZ-16 X[);/ ]'
+      model: '16X'
 
     - regex: '(?:MZ-)?Meizu[_ ]([^/;]+) Build'
       model: '$1'
@@ -15465,3 +15467,11 @@ AT&T:
    regex: 'U304AA[);/ ]'
    device: 'smartphone'
    model: 'Radiant Core'
+
+# BIHEE
+BIHEE:
+  regex: '(ZBH-)?BIHEE'
+  device: 'smartphone'
+  models:
+    - regex: '(A1[12]|A[78]\+|A[56])[);/ ]'
+      model: '$1'
