feat(device) detect new brand Xiaomi model: Redmi K20 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13167,6 +13167,9 @@ Xiaomi:
       model: 'Redmi 10X'
     - regex: 'M2004J7BC[);/ ]'
       model: 'Redmi 10X Pro'
+    - regex: 'Redmi K20 Pro[);/ ]'
+      model: 'Redmi K20 Pro'
+
     - regex: 'MI PAD 4 PLUS[);/ ]'
       model: 'Mi Pad 4 Plus'
       device: 'tablet'
