feat(device) detect brand Nomi model: Beat M (i4510)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8932,6 +8932,8 @@ Nomi:
       model: 'Evo X2'
     - regex: 'i5050[;/) ]'
       model: 'Evo Z'
+    - regex: 'Nomi_i4510[;/) ]'
+      model: 'Beat M'
     - regex: 'i5532[;/) ]'
       model: 'Space X2'
     - regex: 'C101010 Ultra2'
