--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -199,3 +199,23 @@
     model: Redmi K20 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Nomi_i4510) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.32 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 70.0.3538.32
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: NM
+    model: Beat M
+  os_family: Android
+  browser_family: Chrome
