feat(device) detect brand Blu model: Studio 5.0 K feat(device) detect brand Ledstar model: Novus Premium 6.0"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2127,13 +2127,15 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash XL|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro'
+  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash XL|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro'
   device: 'smartphone'
   models:
    - regex: 'Advance (4.0 ?[LM]|4.0|5.0(?: HD)?|A4)'
      model: 'Advance $1'
    - regex: 'Studio (5.0 C|5.5|View XL|Mega|C 8\+8|C HD|C|G|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)'
      model: 'Studio $1'
+   - regex: 'Studio (5.0)K'
+     model: 'Studio $1 K'
    - regex: 'STUDIO SELFIE LTE'
      model: 'Studio Selfie LTE'
    - regex: 'STUDIO ONE'
@@ -7174,11 +7176,13 @@ Leagoo:
 
 # Ledstar
 Ledstar:
-  regex: 'Trendy 5.0'
+  regex: '(?:Ledstar[_ ])?(?:Trendy 5.0|Novus_Premium_6.0)'
   device: 'smartphone'
   models:
     - regex: 'Trendy 5.0'
       model: 'Trendy 5.0'
+    - regex: 'Ledstar_Novus_Premium_6.0[);/ ]'
+      model: 'Novus Premium 6.0"'
 
 # LeEco
 LeEco:
