--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -219,3 +219,43 @@
     model: Beat M
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.1; Ledstar_Novus_Premium_6.0 Build/JOP40D)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: LD
+    model: Novus Premium 6.0"
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; STUDIO 5.0K Build/KOT49H)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BU
+    model: Studio 5.0 K
+  os_family: Android
+  browser_family: Android Browser
