--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -58,7 +58,7 @@
   version: '$1'
 
 # DingTalk
-- regex: 'DingTalk/([^\)]+)'
+- regex: 'DingTalk/([0-9\.]+)'
   name: 'DingTalk'
   version: '$1'
 
