--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -57,6 +57,11 @@
   name: 'WeChat'
   version: '$1'
 
+# DingTalk
+- regex: 'DingTalk/([0-9\.]+)'
+  name: 'DingTalk'
+  version: '$1'
+
 # Sina Weibo
 - regex: '.*__weibo__([0-9\.]+)__'
   name: 'Sina Weibo'
