Detect new brand: Tone, AT&T, BIHEE, Ravoz and Detect old devices model for brands: Realme, Positivo BGH, Blackview , Wiko, Alcatel, Multilaser, Samsung, How, LG, Kyocera, Huawei, Oppo, HTC, Sony, Sharp, Google, Panasonic, ZTE, Coolpad  (#6333)
* feat(device) detect brand Realme model: C11 (RMX2185)

issue #6330

* feat(device) detect brand Multilaser models: G Pro, G, G Max, E Lite, M7s Lite, H
feat(device) detect brand Positivo BGH models: Twist 3, Twist Tab

issue #6330

* feat(device) detect new brand Ravoz models: Z3, Z4, Z7

* feat(device) detect brand Alcatel model: 1s (5028Y_EEA)
feat(device) detect brand Blackview model: BV9900
feat(device) detect brand Wiko model: Ride (W-U300)

* feat(device) detect new brand Tone models: e19, m15
feat(device) detect brand Coolpad model: Legacy (cp3705AS)
feat(device) detect brand Alcatel model: 3X (2019) (5048Y_EEA)
feat(device) detect brand Wiko model: Life 2 (U307AS)
feat(device) detect brand ZTE model: Blade Q+ (402ZT)
feat(device) detect brand Sharp model: Aquos S3 (SH-02M)
feat(device) detect brand Kyocera models: Gratina 4G (KYF31), Urbano V01 (KYV31)

* feat(device) detect brand Samsung models: GALAXY S8+ (SC-03J), GALAXY S9 (SC-02K),
 GALAXY S9+ (SC-03K), GALAXY S10 (SC-03L), GALAXY S10+ (SC-04L),
 GALAXY S20+ 5G (SC-52A), GALAXY A20 (SC-02M), GALAXY Note Edge (SC-01G),
 GALAXY Note 8 (SC-01K), GALAXY Note 9 (SC-01L)

feat(device) detect brand Kyocera model: Qua Phone QZ (KYV44)
feat(device) detect brand Huawei model: P9 Lite (VNS-L22)

* feat(device) detect brand Samsung models: GALAXY S8 (SC-02J), GALAXY Feel (SC-04J)
 GALAXY Note 10+ (SC-01M), GALAXY S6 (SC-05G), GALAXY Active Neo (SC-01H)

feat(device) detect brand Sharp models: Aquos Ever (SH-02J)
feat(device) detect brand Kyocera model: Torque G04 (KYV46)
feat(device) detect brand Oppo model: Reno A (CPH1983)

fix(devices) fixed Samsung model names: GALAXY S6 edge (Edge in uppercase), GALAXY S7 active (Active in upperca

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -234,3 +234,9 @@
   regex: 'Snapchat/([\d\.]+)'
   name: 'Snapchat'
   version: '$1'
+
+# UnityPlayer
+- regex: 'UnityPlayer/([\d\.]+)'
+  name: 'UnityPlayer'
+  version: '$1'
+
