--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -259,3 +259,81 @@
     model: Studio 5.0 K
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 Linux; Android 4.0.4; RMD-1050 Build/IMM76D AppleWebKit/537.36 KHTML, like Gecko Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: RX
+    model: RMD-1050
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 Linux; Android 4.0.3; RMD-1030 Build/IML74K AppleWebKit/537.36 KHTML, like Gecko Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.0.3
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: RX
+    model: RMD-1030
+  os_family: Android
+  browser_family: Chrome
+- user_agent: Mozilla/5.0 Linux; U; Android 4.1.1; uk-ua; Enot-E102 Build/JRO03H AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: 3E
+    model: E102
+  os_family: Android
+  browser_family: Android Browser
+- user_agent: Mozilla/5.0 (Linux; U; Android 4.0.3; ru-ru; ENOT J101 Build/MID) AppleWebKit/534.30 (KHTML like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: Android
+    short_name: AND
+    version: 4.0.3
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: 3E
+    model: J101
+  os_family: Android
+  browser_family: Android Browser
