--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14548,10 +14548,10 @@ Xiaolajiao:
 
 # Ritmix
 Ritmix:
-  regex: '(RMD[-_](?:10(?:2[689]|5[89])|1121|75[01]|726|85[57]|870)|RMP-(?:450|50[56]|530|600))[);/ ]'
+  regex: '(RMD[-_](?:10(?:2[689]|30|5[089])|1121|75[01]|726|85[57]|870)|RMP-(?:450|50[56]|530|600))[);/ ]'
   device: 'tablet'
   models:
-    - regex: 'RMD[-_](10(?:2[689]|5[89])|1121|75[01]|726|85[57]|870)[);/ ]'
+    - regex: 'RMD[-_](10(?:2[689]|30|5[089])|1121|75[01]|726|85[57]|870)[);/ ]'
       model: 'RMD-$1'
     - regex: 'RMP[-_](450|50[56]|530|600)[);/ ]'
       model: 'RMP-$1'
@@ -15484,3 +15484,9 @@ BIHEE:
   models:
     - regex: '(A1[12]|A[78]\+|A[56])[);/ ]'
       model: '$1'
+
+# Enot
+Enot:
+  regex: 'Enot[ _-](E102|J101)[);/ ]'
+  device: 'tablet'
+  model: '$1'
