feat (device) detect new brand Kooper model: Mobile W502

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15490,3 +15490,9 @@ Enot:
   regex: 'Enot[ _-](E102|J101)[);/ ]'
   device: 'tablet'
   model: '$1'
+
+# Kooper
+Kooper:
+  regex: 'Kooper-mobile-W502[);/ ]'
+  device: 'smartphone'
+  model: 'Mobile W502'
