feat (device) detect  brand Thomson model: TB28D19DHS-01 28.0"

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -4931,3 +4931,24 @@
     model: X9S
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V096;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V096 THOMSON,TB28D19DHS-01,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: TB28D19DHS-01 28.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+
