--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -263,9 +263,12 @@ TCL:
 
 # Thomson
 Thomson:
-  regex: 'THOMSON|THOM'
+  regex: 'THOMSON[,]?|THOM'
   device: 'tv'
   models:
+    - regex: 'TB28D19DHS-01'
+      model: 'TB28D19DHS-01 28.0"'
+
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
 
