--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -258,6 +258,8 @@ TCL:
   regex: 'TCL'
   device: 'tv'
   models:
+    - regex: '(32D1820)'
+      model: '$1'
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
 
@@ -266,9 +268,18 @@ Thomson:
   regex: 'THOMSON[,]?|THOM'
   device: 'tv'
   models:
-    - regex: 'TB28D19DHS-01'
-      model: 'TB28D19DHS-01 28.0"'
-
+    - regex: '(TB28D19DHS-01|T28D18SFS-01B)'
+      model: '$1 28.0"'
+    - regex: '(T32RTM5040|T32D18SFS-01B)'
+      model: '$1 32.0"'
+    - regex: '(T43FSL5031|T43D18SFS-01B)'
+      model: '$1 43.0"'
+    - regex: '(T40D18SFS-01B)'
+      model: '$1 40.0"'
+    - regex: '(T49D18SFS-01B)'
+      model: '$1 49.0"'
+    - regex: '(T55D18[SD]FS-01B)'
+      model: '$1 55.0"'
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
 
